# Sequent

./: .gitignore  Cargo.toml  TODO.txt  clippy.toml  sequents.txt
assets/levels/: test.sq
src/: action.rs  animation.rs  background.rs  coord.rs  game_ui.rs  ingame.rs  macros.rs  main.rs  menus.rs  misc.rs  parser.rs  proof.rs  settings.rs
src/proof/: action.rs  calcul.rs  mod.rs  natural_logic.rs  rendering.rs
src/proofs/: mod.rs  rendering.rs
src/storage/: test.sq
