[package]
name = "sequent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = { version = "0.12.1", features = ["text", "glyph", "egui", "extra"] }

[profile.dev]
opt-level = 2

[lints.clippy]
disallowed-methods = "deny"
needless_return = "allow"
single_match = "allow"
collapsible_if = "allow"
too_many_arguments = "allow"
len_zero = "allow"
type_complexity = "allow"
